# matrix-transformations

./: .editorconfig  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: commit-lint.yml  docs.yml  main.yml  release.yml  security-audit.yml
benches/criterion/: fibb.rs
benches/iai/: fibb.rs
book/: .gitignore  .markdownlint.json  book.toml  package-lock.json  package.json
book/src/: chapter-1.md
fuzz/: Cargo.toml
src/: lib.rs  matrix_ops.rs  vector_ops.rs
src/vector_operations/: .vec_matrix_ops.rs.swp  mod.rs  vec_matrix_ops.rs  vec_point.rs  vec_scaling_projection.rs  vec_two_dim_matrix_ops.rs  vector_ops.rs
src/vector_ops/: mod.rs
