[package]
name = "matrix_transformations"
version = "0.0.0"
authors = [
	"Alfredo Gutierrez, <icealfredo123@gmail.com>"
]
description = "Provides various matrix/vector operations"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.63.0"
exclude = [
	".devcontainer",
	".github",
	".vscode",
	".idea",
	"deny.toml",
	".commitlintrc.json",
	"package.json",
	"package-lock.json",
	"fuzz",
	"book",
	"benches",
]

[dependencies]
num = "0.4"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
num = "0.4"
iai = "0.1.0"

# criterion benchmarks
[[bench]]
path = "benches/criterion/fibb.rs"
name = "criterion_fibb"
harness = false

# iai benchmarks
[[bench]]
path = "benches/iai/fibb.rs"
name = "iai_fibb"
harness = false
